
!!! includes security updates - please update all Kustvakt libraries
!!! Please also update Krill to version 0.60.2 and Koral to version 0.38 


2021-12-10
 - [security] Updated log4j libs due to CVE-2021-44228.
2022-01-03
 - [security] More log4j security updates
 - Cleaned up LDAP libraries
 - Bumped spring.version from 5.3.13 to 5.3.14
2022-01-25
 - Added show-tokens option to the search API.

# version 0.64

2021-07-29
 - Updated the change files and made a new version.

# version 0.63.2

2021-06-11
 - Updated OAuth2 token length & secure random algorithm config.
 - Added character set filter to random code generator, e.g. for client_id.
2021-07-22
 - Updated cache settings and some loggings.
2021-07-26
 - Replaced annotation parsing with restoring the annotation tables to the
 database.
 - Moved cache config to the full config. 

# version 0.63.1
2021-03-25
 - Updated Koral version for InfoController.

# version 0.63
14/01/2021
 - Updated Flyway (margaretha)
21/01/2021
 - Fixed running pipe and updated tests with mockserver (margaretha)
19/02/2021
 - Enabled API info web-service (margaretha)  
 
# version 0.62.4
24/01/2020
 - Removed salt from config and updated config files.
05/02/2020
 - Added welcome page.
01/04/2020
 - Support expand query parameter for match retrieval (diewald)
11/05/2020
 - Added tool to create VC from list (diewald)
29/05/2020
 - Improved conversion tool to deal with Cosmas-II VC definitions
   (diewald)
02/06/2020
 - Introduced experimental X-Index-Revision header (diewald)

# version 0.62.3
03/12/2019
 - Implemented pipe extension in the search API (margaretha)
11/12/2019
 - Added errors when requesting VC in caching process (margaretha, 
   resolved #47) 
12/12/2019
 - Added support for multiple cq parameters (margaretha, resolved #46)
13/12/2019
 - Handled pipe errors and added tests (margaretha) 
20/12/2019
 - Removed transactional annotations from simple select queries (margaretha) 

# version 0.62.2
13/11/2019